<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:background="#fde907"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/sure_btn"
            android:background="#1823b7"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sure"/>

    </LinearLayout>

</LinearLayout>