<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#207620"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/topic"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topic"/>

    <TextView
        android:id="@+id/content_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="3dp"
        android:paddingBottom="30dp"
        android:text="@string/details_content"/>

</LinearLayout>